# Insight-Weaver

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  test_import.py
.devcontainer/: devcontainer.json
docs/: design.md  package.md
services/backend/: Dockerfile  main.py
services/frontend/: Dockerfile  index.html
